inputed portfolio links

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
             </p>
             <h6>
-              <a href="#"
+              <a href="https://pharmahubmedica-git-sandbox-v1-jajorgbor.vercel.app/"
                 class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
                 Learn more
               </a>
@@ -159,7 +159,7 @@
               laboriosam repellendus aspernatur?
             </p>
             <h6>
-              <a href="#">
+              <a href="https://linqman.com">
                 Learn more
               </a>
             </h6>
@@ -208,7 +208,7 @@
 
             </p>
             <h6>
-              <a href="#"
+              <a href="https://jajorgbor.github.io/Easy-bank-landing-page/"
                 class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
                 Learn more
               </a>
@@ -234,7 +234,7 @@
 
             </p>
             <h6>
-              <a href="#"
+              <a href="https://jajorgbor.github.io/github-finder/"
                 class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
                 Learn more
               </a>
