added target="_blank" to portfolio links

--- a/public/index.html
+++ b/public/index.html
@@ -133,13 +133,14 @@
             </p>
             <h6>
               <a href="https://pharmahubmedica-git-sandbox-v1-jajorgbor.vercel.app/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
+                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
+                target="_blank">
                 Learn more
               </a>
             </h6>
           </div>
           <div class="h-[450px] order-first md:order-2">
-            <img src="./images/portfolio/pharmahubmedica.png" alt="egg" class="object-contain w-full h-full ">
+            <img src="./images/portfolio/pharmahubmedica.png" alt="egg" class="object-contain w-full h-full">
           </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2">
@@ -159,7 +160,7 @@
               laboriosam repellendus aspernatur?
             </p>
             <h6>
-              <a href="https://linqman.com">
+              <a href="https://linqman.com" target="_blank">
                 Learn more
               </a>
             </h6>
@@ -194,7 +195,7 @@
           </div>
         </div> -->
         <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="p-5 lg:p-28 ">
+          <div class="p-5 lg:p-28">
 
             <h2 class="font-bold text-[2rem]">
               Easy Bank Landing page
@@ -209,13 +210,14 @@
             </p>
             <h6>
               <a href="https://jajorgbor.github.io/Easy-bank-landing-page/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
+                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
+                target="_blank">
                 Learn more
               </a>
             </h6>
           </div>
           <div class="h-[450px] order-first md:order-2">
-            <img src="./images/portfolio/easybanklandingpage.png" alt="egg" class="object-contain w-full h-full ">
+            <img src="./images/portfolio/easybanklandingpage.png" alt="egg" class="object-contain w-full h-full">
           </div>
         </div>
 
@@ -235,7 +237,8 @@
             </p>
             <h6>
               <a href="https://jajorgbor.github.io/github-finder/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden ">
+                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden "
+                target="_blank">
                 Learn more
               </a>
             </h6>
