--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/dist.css">
 
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <title>Joshua's Portfolio</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -23,12 +23,13 @@
     }
 
     .hero {
-      background-position-x: center;
+      background-position-x: 80%;
     }
 
-    @media screen and (min-width: 1500px) {
+    @media screen and (min-width: 700px) {
       .hero {
         /* background-position-y: -13rem; */
+        background-position-x: center;
       }
     }
 
@@ -41,8 +42,8 @@
 </head>
 
 <body>
-  <main class="container mx-auto">
-    <header class="mx-auto container absolute top-0 w-full">
+  <main class="xl:container mx-auto">
+    <header class="mx-auto xl:container absolute top-0 w-full">
       <nav class=" flex justify-between w-5/6 mx-auto px-5 py-4">
         <div class="text-capitalize text-2xl text-white">Joshua Ajorgbor</div>
         <ul class="hidden md:flex md:w-2/5 justify-between">
@@ -70,7 +71,9 @@
       class="hero h-[40rem] bg-[url('../images/desktop/hero-image.jpg')] bg-cover bg-no-repeat text-center  pt-20 md:pt-28 grid place-items-center">
 
       <h1 class="text-[3rem] uppercase text-white">
-        Hi, I'm Joshua.
+        Hi, I'm Joshua 👋🏿.
+        <br>
+        Welcome to my site ✨
       </h1>
 
     </section>
@@ -87,7 +90,7 @@
           </div>
           <div class="p-5 lg:p-28 ">
 
-            <h2 class="font-bold text-[2rem] uppercase">
+            <h2 class="font-bold text-2xl md:text-[2rem] uppercase">
               ABOUT ME
             </h2>
             <p class="my-3">
@@ -103,7 +106,7 @@
 
         </div>
         <div class="md:w-4\5 mx-auto gap-6 my-10">
-          <h2 class="font-bold text-[2rem] text-center my-5">
+          <h2 class="font-bold text-2xl md:text-[2rem] text-center my-5">
             Skills & Competencies
           </h2>
           <div class="grid grid-cols-4 ">
@@ -114,64 +117,66 @@
           </div>
 
         </div>
-        <h2 class="font-bold text-[2rem] text-center my-10">
-          My Portfolio
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="p-5 lg:p-28 ">
+        <div class="bg-slate-100">
+          <h2 class="font-bold text-2xl md:text-[2rem] text-center my-10">
+            My Portfolio
+          </h2>
+          <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="p-5 lg:p-28 ">
 
-            <h2 class="font-bold text-[2rem]">
-              Pharmahubemedica.ng
-            </h2>
-            <p class="my-3">
+              <h2 class="font-bold text-2xl md:text-[2rem]">
+                Pharmahubemedica.ng
+              </h2>
+              <p class="my-3">
 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
-              possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
-              quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
-              Asperiores repellendus eos accusamus?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
+                possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
+                quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
+                Asperiores repellendus eos accusamus?
 
-            </p>
-            <h6>
-              <a href="https://pharmahubmedica-git-sandbox-v1-jajorgbor.vercel.app/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
-                target="_blank">
-                Learn more
-              </a>
-            </h6>
+              </p>
+              <h6 class="text-blue-700">
+                <a href="https://pharmahubmedica-git-sandbox-v1-jajorgbor.vercel.app/"
+                  class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
+                  target="_blank">
+                  Learn more
+                </a>
+              </h6>
+            </div>
+            <div class="h-[450px] order-first md:order-2">
+              <img src="./images/portfolio/pharmahubmedica.png" alt="egg" class="object-contain w-full h-full">
+            </div>
           </div>
-          <div class="h-[450px] order-first md:order-2">
-            <img src="./images/portfolio/pharmahubmedica.png" alt="egg" class="object-contain w-full h-full">
-          </div>
-        </div>
-        <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="h-[450px] ">
-            <img src="./images/portfolio//linqman.png" alt="egg" class="object-contain w-full h-full">
-          </div>
-          <div class=" p-5 lg:p-28">
+          <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="h-[450px] ">
+              <img src="./images/portfolio//linqman.png" alt="egg" class="object-contain w-full h-full">
+            </div>
+            <div class=" p-5 lg:p-28">
 
 
-            <h2 class="text-[2rem]">
-              Linqman
-            </h2>
-            <p class="my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis veniam nihil dolorem perspiciatis
-              facilis voluptatem aliquid dolor facere accusamus maiores quos magni, hic eveniet error iste saepe maxime
-              quas cum! Maiores, magnam ratione corporis ea quibusdam sunt eligendi labore dolore laudantium nesciunt,
-              laboriosam repellendus aspernatur?
-            </p>
-            <h6>
-              <a href="https://linqman.com" target="_blank">
-                Learn more
-              </a>
-            </h6>
+              <h2 class="text-2xl md:text-[2rem]">
+                Linqman
+              </h2>
+              <p class="my-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis veniam nihil dolorem perspiciatis
+                facilis voluptatem aliquid dolor facere accusamus maiores quos magni, hic eveniet error iste saepe
+                maxime
+                quas cum! Maiores, magnam ratione corporis ea quibusdam sunt eligendi labore dolore laudantium nesciunt,
+                laboriosam repellendus aspernatur?
+              </p>
+              <h6 class="text-green-500">
+                <a href="https://linqman.com" target="_blank">
+                  Learn more
+                </a>
+              </h6>
+            </div>
           </div>
-        </div>
-        <!-- <div class="grid grid-cols-1 md:grid-cols-2">
+          <!-- <div class="grid grid-cols-1 md:grid-cols-2">
           <div
             class="h-[450px] bg-[url('../images/mobile/image-graphic-design.jpg')] md:bg-[url('../images/desktop/image-graphic-design.jpg')] bg-cover flex justify-center items-end pb-12 lg:pb-16">
             <div class="px-3 md:px-0 md:w-4/5 h-auto text-center ">
 
-              <h2 class="text-[2rem]">
+              <h2 class="text-2xl md:text-[2rem]">
                 Photography
               </h2>
               <p class="my-3">
@@ -183,7 +188,7 @@
           <div
             class="  h-[450px] bg-[url('../images/mobile/image-photography.jpg')] md:bg-[url('../images/desktop/image-photography.jpg')] bg-cover flex justify-center items-end pb-12 lg:pb-16">
             <div class="px-3 md:px-0 md:w-4/5 h-auto text-center ">
-              <h2 class=" text-[2rem]">
+              <h2 class=" text-2xl md:text-[2rem]">
                 Graphic design
               </h2>
               <p class="my-3">
@@ -194,60 +199,61 @@
             </div>
           </div>
         </div> -->
-        <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="p-5 lg:p-28">
+          <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="p-5 lg:p-28">
 
-            <h2 class="font-bold text-[2rem]">
-              Easy Bank Landing page
-            </h2>
-            <p class="my-3">
+              <h2 class="font-bold text-2xl md:text-[2rem]">
+                Easy Bank Landing page
+              </h2>
+              <p class="my-3">
 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
-              possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
-              quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
-              Asperiores repellendus eos accusamus?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
+                possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
+                quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
+                Asperiores repellendus eos accusamus?
 
-            </p>
-            <h6>
-              <a href="https://jajorgbor.github.io/Easy-bank-landing-page/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
-                target="_blank">
-                Learn more
-              </a>
-            </h6>
-          </div>
-          <div class="h-[450px] order-first md:order-2">
-            <img src="./images/portfolio/easybanklandingpage.png" alt="egg" class="object-contain w-full h-full">
-          </div>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="p-5 lg:p-28 ">
-
-            <h2 class="font-bold text-[2rem]">
-              Github Finder
-            </h2>
-            <p class="my-3">
-
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
-              possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
-              quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
-              Asperiores repellendus eos accusamus?
-
-            </p>
-            <h6>
-              <a href="https://jajorgbor.github.io/github-finder/"
-                class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden "
-                target="_blank">
-                Learn more
-              </a>
-            </h6>
-          </div>
-          <div class="h-[450px] order-first ">
-            <img src="./images/portfolio/github-finder.png" alt="egg" class="object-contain w-full h-full ">
+              </p>
+              <h6 class="text-green-500">
+                <a href="https://jajorgbor.github.io/Easy-bank-landing-page/"
+                  class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
+                  target="_blank">
+                  Learn more
+                </a>
+              </h6>
+            </div>
+            <div class="h-[450px] order-first md:order-2">
+              <img src="./images/portfolio/easybanklandingpage.png" alt="egg" class="object-contain w-full h-full">
+            </div>
           </div>
 
+          <div class="grid grid-cols-1 md:grid-cols-2">
+            <div class="p-5 lg:p-28 ">
 
+              <h2 class="font-bold text-2xl md:text-[2rem]">
+                Github Finder
+              </h2>
+              <p class="my-3">
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae maiores cumque assumenda alias
+                possimus eius at veniam aspernatur. Sit molestias praesentium libero perspiciatis dicta id nostrum fuga
+                quia dolores? Quod distinctio saepe amet soluta? Obcaecati quo recusandae quasi corrupti repudiandae!
+                Asperiores repellendus eos accusamus?
+
+              </p>
+              <h6 class="text-blue-700">
+                <a href="https://jajorgbor.github.io/github-finder/"
+                  class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden "
+                  target="_blank">
+                  Learn more
+                </a>
+              </h6>
+            </div>
+            <div class="h-[450px] order-first ">
+              <img src="./images/portfolio/github-finder.png" alt="egg" class="object-contain w-full h-full ">
+            </div>
+
+
+          </div>
         </div>
       </div>
     </section>
@@ -265,7 +271,7 @@
             <img src="./images/image-emily.jpg" alt="emily" class="rounded-full w-12 inline-block">
           </div>
           <p>
-            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always
+            We put our trust in Joshua and he delivered, making sure our needs were met and deadlines were always
             hit.
           </p>
           <div class="flex flex-col gap-3">
@@ -282,7 +288,7 @@
             <img src="./images/image-thomas.jpg" alt="thomas" class="rounded-full w-12 inline-block">
           </div>
           <p>
-            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
+            Joshua’s enthusiasm coupled with his keen interest in our brand’s success made it a satisfying and
             enjoyable
             experience.
           </p>
@@ -301,7 +307,7 @@
           </div>
           <p>
 
-            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+            Incredible end result! Our sales increased over 400% when we worked with Joshua. Highly recommended!
           </p>
           <div class="flex flex-col gap-3">
             <h4>
@@ -342,10 +348,10 @@
     <section>
       <section class="bg-white dark:bg-blue-400">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
-          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-white dark:text-white">Contact Us
+          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-white dark:text-white">Contact Me
           </h2>
-          <p class="mb-8 lg:mb-16 font-light text-center text-white dark:text-white sm:text-xl">Got a technical
-            issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
+          <p class="mb-8 lg:mb-16 font-light text-center text-white dark:text-white sm:text-xl">I'd love to hear from
+            you </p>
           <form action="#" class="space-y-8">
             <div>
               <label for="email" class="block mb-2 text-sm font-medium text-white dark:text-white">Your
@@ -368,7 +374,7 @@
                 placeholder="Leave a comment..."></textarea>
             </div>
             <button type="submit"
-              class="py-3 px-5 text-sm font-medium text-center bg-green-400 text-white rounded-lg bg-primary-700 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send
+              class="py-3 px-5 text-sm font-medium text-center bg-red-400 text-white rounded-lg bg-primary-700 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send
               message</button>
           </form>
         </div>
