--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 <body>
   <main class="xl:container mx-auto">
     <header class="mx-auto xl:container absolute top-0 w-full">
-      <nav class=" flex justify-between w-5/6 mx-auto px-5 py-4">
+      <nav class=" flex justify-between w-full w-5/6 mx-auto px-5 py-4">
         <div class="text-capitalize text-2xl text-white">Joshua Ajorgbor</div>
         <ul class="hidden md:flex md:w-2/5 justify-between">
           <li
@@ -70,8 +70,8 @@
     <section
       class="hero h-[40rem] bg-[url('../images/desktop/hero-image.jpg')] bg-cover bg-no-repeat text-center  pt-20 md:pt-28 grid place-items-center">
 
-      <h1 class="text-[3rem] uppercase text-white">
-        Hi, I'm Joshua 👋🏿.
+      <h1 class="text-[1.5rem] md:text-[3rem] uppercase text-white">
+        Hi, I'm Joshua 👋🏿
         <br>
         Welcome to my site ✨
       </h1>
@@ -81,14 +81,14 @@
     <!-- End hero section -->
 
     <!-- Start Info section -->
-    <section class="mx-auto w-[90%]">
+    <section class="mx-auto md:w-[90%]">
       <div class="flex flex-col">
 
         <div class="grid grid-cols-1 md:grid-cols-2">
-          <div class="h-[500px] order-first ">
-            <img src="./images/desktop/about-me.jpg" alt="egg" class="object-contain w-full h-full ">
+          <div class="md:h-[500px] order-first ">
+            <img src="./images/desktop/about-me.jpg" alt="egg" class="object-cover w-full h-full ">
           </div>
-          <div class="p-5 lg:p-28 ">
+          <div class="p-5  lg:px-20 ">
 
             <h2 class="font-bold text-2xl md:text-[2rem] uppercase">
               ABOUT ME
@@ -122,7 +122,7 @@
             My Portfolio
           </h2>
           <div class="grid grid-cols-1 md:grid-cols-2">
-            <div class="p-5 lg:p-28 ">
+            <div class="p-5  lg:px-20 ">
 
               <h2 class="font-bold text-2xl md:text-[2rem]">
                 Pharmahubemedica.ng
@@ -139,7 +139,7 @@
                 <a href="https://pharmahubmedica-git-sandbox-v1-jajorgbor.vercel.app/"
                   class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
                   target="_blank">
-                  Learn more
+                  Visit Site
                 </a>
               </h6>
             </div>
@@ -151,7 +151,7 @@
             <div class="h-[450px] ">
               <img src="./images/portfolio//linqman.png" alt="egg" class="object-contain w-full h-full">
             </div>
-            <div class=" p-5 lg:p-28">
+            <div class=" p-5  lg:px-20">
 
 
               <h2 class="text-2xl md:text-[2rem]">
@@ -166,7 +166,7 @@
               </p>
               <h6 class="text-green-500">
                 <a href="https://linqman.com" target="_blank">
-                  Learn more
+                  Visit Site
                 </a>
               </h6>
             </div>
@@ -200,7 +200,7 @@
           </div>
         </div> -->
           <div class="grid grid-cols-1 md:grid-cols-2">
-            <div class="p-5 lg:p-28">
+            <div class="p-5 lg:px-20">
 
               <h2 class="font-bold text-2xl md:text-[2rem]">
                 Easy Bank Landing page
@@ -217,7 +217,7 @@
                 <a href="https://jajorgbor.github.io/Easy-bank-landing-page/"
                   class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden"
                   target="_blank">
-                  Learn more
+                  Visit Site
                 </a>
               </h6>
             </div>
@@ -227,7 +227,7 @@
           </div>
 
           <div class="grid grid-cols-1 md:grid-cols-2">
-            <div class="p-5 lg:p-28 ">
+            <div class="p-5 lg:px-20 ">
 
               <h2 class="font-bold text-2xl md:text-[2rem]">
                 Github Finder
@@ -244,7 +244,7 @@
                 <a href="https://jajorgbor.github.io/github-finder/"
                   class="relative after:w-[120%] after:h-3 after:bg-red-500 after:opacity-60 after:absolute after:-bottom-1 after:-left-[10%] after:rounded-3xl after:hidden "
                   target="_blank">
-                  Learn more
+                  Visit Site
                 </a>
               </h6>
             </div>
